--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=7.4",
         "magento/framework": ">=102.0",
-        "guzzlehttp/guzzle": "^7.0",
+        "guzzlehttp/guzzle": "^6.5|^7.0",
         "ext-dom": "*",
         "ext-json": "*",
         "composer-plugin-api": "^2.0"
