--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "getjohn/module-composer-vendor-checker",
-    "description": "Magento 2 module to check vendor websites for latest module versions",
+    "description": "Composer plugin to check installed packages for available updates",
     "type": "composer-plugin",
     "license": "MIT",
     "authors": [
@@ -11,18 +11,22 @@
     ],
     "require": {
         "php": ">=7.4",
-        "magento/framework": ">=102.0",
         "guzzlehttp/guzzle": "^6.5|^7.0",
-        "ext-dom": "*",
         "ext-json": "*",
         "composer-plugin-api": "^2.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5|^10.0",
+        "composer/composer": "^2.0"
+    },
     "autoload": {
-        "files": [
-            "registration.php"
-	],
         "psr-4": {
             "GetJohn\\VendorChecker\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "GetJohn\\VendorChecker\\Tests\\": "tests/"
         }
     },
     "extra": {
