feat: add docs, standalone runner, and composer config
- Track docs/ directory (dashboard, delivery reports, scan results)
- Fix PHP 8.4 compat table column widths and files dropdown layout
- Add standalone run-check.php for running checks outside Composer plugin
- Add allow-plugins config for self-referencing plugin

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
     },
     "extra": {
         "class": "GetJohn\\VendorChecker\\ComposerPlugin"
+    },
+    "config": {
+        "allow-plugins": {
+            "getjohn/module-composer-vendor-checker": true
+        }
     }
 }
